# ml-zoomcamp

./: README.md  Week1_Homework_Notebook.ipynb  Week2_Homework_Notebook.ipynb  Week3_Homework_Notebook.ipynb  Week4_Homework_Notebook.ipynb  homework week5.ipynb
2025/mlz2025_week5/: predict.py  train.py  workshop-uv-fastapi.ipynb  workshop.ipynb
2025/mlz2025_week5_hw/: Dockerfile  main.py  predict.py  pyproject.toml  test.py
2025/mlz2025_week6_hw/: fe_tree.dot  week6_hw.ipynb
Week5/: Dockerfile  Pipfile  Untitled.ipynb  flask_app.py  flask_app_model2.py  test.py
Week5/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
